--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
